# controllers/userController.js
@@ -3,6 +3,7 @@ const User = require('../models/User');
 
 exports.createUser = [
   body('username').notEmpty().withMessage('Username is required'),
+  body('email').isEmail().withMessage('Valid email is required'),
   body('location').notEmpty().withMessage('Location is required'),
   body('foodPreferences').isArray().withMessage('Food preferences must be an array'),
   async (req, res) => {
@@ -10,9 +11,9 @@ exports.createUser = [
     if (!errors.isEmpty()) {
       return res.status(400).json({ errors: errors.array() });
     }
-    const { username, location, foodPreferences } = req.body;
+    const { username, email, location, foodPreferences } = req.body;
     try {
-      const newUser = new User({ username, location, foodPreferences });
+      const newUser = new User({ username, email, location, foodPreferences });
       await newUser.save();
       res.status(201).json(newUser);
     } catch (err) {
@@ -32,6 +33,7 @@ exports.getAllUsers = async (req, res) => {
 
 exports.updateUser = [
   body('username').optional().notEmpty().withMessage('Username is required'),
+  body('email').optional().isEmail().withMessage('Valid email is required'),
   body('location').optional().notEmpty().withMessage('Location is required'),
   body('foodPreferences').optional().isArray().withMessage('Food preferences must be an array'),
   async (req, res) => {
@@ -44,7 +46,7 @@ exports.updateUser = [
       if (!updatedUser) {
         return res.status(404).json({ message: 'User not found' });
       }
-      res.status(204).json(updatedUser);
+      res.status(200).json(updatedUser); // Change 204 to 200
     } catch (err) {
       res.status(500).json({ message: err.message });
     }
